src/main/java/com/intellij/lang/graql/parser/GraqlParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.lang.graql.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.lang.graql.psi.GraqlTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class GraqlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == AGGREGATE) {
      r = aggregate(b, 0);
    }
    else if (t == AGGREGATE_QUERY) {
      r = aggregateQuery(b, 0);
    }
    else if (t == AND_PATTERN) {
      r = andPattern(b, 0);
    }
    else if (t == ARGUMENT) {
      r = argument(b, 0);
    }
    else if (t == CASTING) {
      r = casting(b, 0);
    }
    else if (t == CLUSTER_PARAM) {
      r = clusterParam(b, 0);
    }
    else if (t == DEFINE_QUERY) {
      r = defineQuery(b, 0);
    }
    else if (t == DELETE_QUERY) {
      r = deleteQuery(b, 0);
    }
    else if (t == GET_QUERY) {
      r = getQuery(b, 0);
    }
    else if (t == ID) {
      r = id(b, 0);
    }
    else if (t == IDENTIFIER) {
      r = identifier(b, 0);
    }
    else if (t == IN_LIST) {
      r = inList(b, 0);
    }
    else if (t == INSERT_QUERY) {
      r = insertQuery(b, 0);
    }
    else if (t == LABEL) {
      r = label(b, 0);
    }
    else if (t == LABEL_LIST) {
      r = labelList(b, 0);
    }
    else if (t == MATCH_PART) {
      r = matchPart(b, 0);
    }
    else if (t == NAMED_AGG) {
      r = namedAgg(b, 0);
    }
    else if (t == OF_LIST) {
      r = ofList(b, 0);
    }
    else if (t == OR_PATTERN) {
      r = orPattern(b, 0);
    }
    else if (t == PATTERN) {
      r = pattern(b, 0);
    }
    else if (t == PATTERNS) {
      r = patterns(b, 0);
    }
    else if (t == PREDICATE) {
      r = predicate(b, 0);
    }
    else if (t == PROPERTY) {
      r = property(b, 0);
    }
    else if (t == QUERY) {
      r = query(b, 0);
    }
    else if (t == UNDEFINE_QUERY) {
      r = undefineQuery(b, 0);
    }
    else if (t == VALUE) {
      r = value(b, 0);
    }
    else if (t == VALUE_OR_VAR) {
      r = valueOrVar(b, 0);
    }
    else if (t == VAR_PATTERN) {
      r = varPattern(b, 0);
    }
    else if (t == VAR_PATTERNS) {
      r = varPatterns(b, 0);
    }
    else if (t == VARIABLE) {
      r = variable(b, 0);
    }
    else if (t == VARIABLES) {
      r = variables(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return GraqlFile(b, l + 1);
  }

  /* ********************************************************** */
  // !<<eof>> (query)*
  static boolean GraqlFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = GraqlFile_0(b, l + 1);
    r = r && GraqlFile_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !<<eof>>
  private static boolean GraqlFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eof(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (query)*
  private static boolean GraqlFile_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!GraqlFile_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "GraqlFile_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (query)
  private static boolean GraqlFile_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GraqlFile_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = query(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier argument*      // customAgg
  //     | '(' namedAgg (',' namedAgg)* ')'
  public static boolean aggregate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGGREGATE, "<aggregate>");
    r = aggregate_0(b, l + 1);
    if (!r) r = aggregate_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // identifier argument*
  private static boolean aggregate_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && aggregate_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // argument*
  private static boolean aggregate_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!argument(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aggregate_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // '(' namedAgg (',' namedAgg)* ')'
  private static boolean aggregate_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && namedAgg(b, l + 1);
    r = r && aggregate_1_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' namedAgg)*
  private static boolean aggregate_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_1_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!aggregate_1_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aggregate_1_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' namedAgg
  private static boolean aggregate_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregate_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && namedAgg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // matchPart 'aggregate' aggregate ';'
  public static boolean aggregateQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aggregateQuery")) return false;
    if (!nextTokenIs(b, MATCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart(b, l + 1);
    r = r && consumeToken(b, AGGREGATE);
    r = r && aggregate(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, AGGREGATE_QUERY, r);
    return r;
  }

  /* ********************************************************** */
  // '{' patterns '}'
  public static boolean andPattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "andPattern")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && patterns(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, AND_PATTERN, r);
    return r;
  }

  /* ********************************************************** */
  // VARIABLE  // variableArgument
  //     | aggregate
  public static boolean argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = consumeToken(b, VARIABLE);
    if (!r) r = aggregate(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // variable (':' VARIABLE)?
  //     | variable VARIABLE
  public static boolean casting(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "casting")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASTING, "<casting>");
    r = casting_0(b, l + 1);
    if (!r) r = casting_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // variable (':' VARIABLE)?
  private static boolean casting_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "casting_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = variable(b, l + 1);
    r = r && casting_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (':' VARIABLE)?
  private static boolean casting_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "casting_0_1")) return false;
    casting_0_1_0(b, l + 1);
    return true;
  }

  // ':' VARIABLE
  private static boolean casting_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "casting_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLON, VARIABLE);
    exit_section_(b, m, null, r);
    return r;
  }

  // variable VARIABLE
  private static boolean casting_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "casting_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = variable(b, l + 1);
    r = r && consumeToken(b, VARIABLE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // MEMBERS ';'    // clusterMembers
  //    | SIZE INTEGER ';'
  public static boolean clusterParam(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "clusterParam")) return false;
    if (!nextTokenIs(b, "<cluster param>", MEMBERS, SIZE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLUSTER_PARAM, "<cluster param>");
    r = parseTokens(b, 0, MEMBERS, SEMICOLON);
    if (!r) r = parseTokens(b, 0, SIZE, INTEGER, SEMICOLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // DEFINE varPatterns
  public static boolean defineQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defineQuery")) return false;
    if (!nextTokenIs(b, DEFINE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DEFINE);
    r = r && varPatterns(b, l + 1);
    exit_section_(b, m, DEFINE_QUERY, r);
    return r;
  }

  /* ********************************************************** */
  // matchPart 'delete' variables? ';'
  public static boolean deleteQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deleteQuery")) return false;
    if (!nextTokenIs(b, MATCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart(b, l + 1);
    r = r && consumeToken(b, DELETE);
    r = r && deleteQuery_2(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, DELETE_QUERY, r);
    return r;
  }

  // variables?
  private static boolean deleteQuery_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deleteQuery_2")) return false;
    variables(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // matchPart 'get' (VARIABLE (',' VARIABLE)*)? ';'
  public static boolean getQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "getQuery")) return false;
    if (!nextTokenIs(b, MATCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart(b, l + 1);
    r = r && consumeToken(b, GET);
    r = r && getQuery_2(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, GET_QUERY, r);
    return r;
  }

  // (VARIABLE (',' VARIABLE)*)?
  private static boolean getQuery_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "getQuery_2")) return false;
    getQuery_2_0(b, l + 1);
    return true;
  }

  // VARIABLE (',' VARIABLE)*
  private static boolean getQuery_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "getQuery_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, VARIABLE);
    r = r && getQuery_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' VARIABLE)*
  private static boolean getQuery_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "getQuery_2_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!getQuery_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "getQuery_2_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' VARIABLE
  private static boolean getQuery_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "getQuery_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, VARIABLE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier
  public static boolean id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "id")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ID, "<id>");
    r = identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ID | STRING
  //     | MIN | MAX| MEDIAN | MEAN | STD | SUM | COUNT | PATH | CLUSTER
  //     | DEGREES | MEMBERS | SIZE
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER, "<identifier>");
    r = consumeToken(b, ID);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, MIN);
    if (!r) r = consumeToken(b, MAX);
    if (!r) r = consumeToken(b, MEDIAN);
    if (!r) r = consumeToken(b, MEAN);
    if (!r) r = consumeToken(b, STD);
    if (!r) r = consumeToken(b, SUM);
    if (!r) r = consumeToken(b, COUNT);
    if (!r) r = consumeToken(b, PATH);
    if (!r) r = consumeToken(b, CLUSTER);
    if (!r) r = consumeToken(b, DEGREES);
    if (!r) r = consumeToken(b, MEMBERS);
    if (!r) r = consumeToken(b, SIZE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // labelList
  public static boolean inList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IN_LIST, "<in list>");
    r = labelList(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // matchPart? INSERT varPatterns
  public static boolean insertQuery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "insertQuery")) return false;
    if (!nextTokenIs(b, "<insert query>", INSERT, MATCH)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INSERT_QUERY, "<insert query>");
    r = insertQuery_0(b, l + 1);
    r = r && consumeToken(b, INSERT);
    r = r && varPatterns(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // matchPart?
  private static boolean insertQuery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "insertQuery_0")) return false;
    matchPart(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // identifier | IMPLICIT_IDENTIFIER
  public static boolean label(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "label")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LABEL, "<label>");
    r = identifier(b, l + 1);
    if (!r) r = consumeToken(b, IMPLICIT_IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // label (',' label)*
  public static boolean labelList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "labelList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LABEL_LIST, "<label list>");
    r = label(b, l + 1);
    r = r && labelList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' label)*
  private static boolean labelList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "labelList_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!labelList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "labelList_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' label
  private static boolean labelList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "labelList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && label(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // MATCH patterns                        // matchBase
  //     | matchPart 'limit' INTEGER              ';'    // matchLimit
  //     | matchPart 'offset' INTEGER             ';'    // matchOffset
  //     | matchPart 'order' 'by' VARIABLE ORDER? ';'
  public static boolean matchPart(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "matchPart")) return false;
    if (!nextTokenIs(b, MATCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart_0(b, l + 1);
    if (!r) r = matchPart_1(b, l + 1);
    if (!r) r = matchPart_2(b, l + 1);
    if (!r) r = matchPart_3(b, l + 1);
    exit_section_(b, m, MATCH_PART, r);
    return r;
  }

  // MATCH patterns
  private static boolean matchPart_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "matchPart_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MATCH);
    r = r && patterns(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // matchPart 'limit' INTEGER              ';'
  private static boolean matchPart_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "matchPart_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart(b, l + 1);
    r = r && consumeToken(b, "limit");
    r = r && consumeTokens(b, 0, INTEGER, SEMICOLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // matchPart 'offset' INTEGER             ';'
  private static boolean matchPart_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "matchPart_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart(b, l + 1);
    r = r && consumeToken(b, "offset");
    r = r && consumeTokens(b, 0, INTEGER, SEMICOLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // matchPart 'order' 'by' VARIABLE ORDER? ';'
  private static boolean matchPart_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "matchPart_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = matchPart(b, l + 1);
    r = r && consumeToken(b, "order");
    r = r && consumeToken(b, "by");
    r = r && consumeToken(b, VARIABLE);
    r = r && matchPart_3_4(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // ORDER?
  private static boolean matchPart_3_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "matchPart_3_4")) return false;
    consumeToken(b, ORDER);
    return true;
  }

  /* ********************************************************** */
  // aggregate 'as' identifier
  public static boolean namedAgg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "namedAgg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, NAMED_AGG, "<named agg>");
    r = aggregate(b, l + 1);
    r = r && consumeToken(b, AS);
    r = r && identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // labelList
  public static boolean ofList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ofList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, OF_LIST, "<of list>");
    r = labelList(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (varPattern|andPattern) 'or' (varPattern|andPattern)
  public static boolean orPattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "orPattern")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, OR_PATTERN, "<or pattern>");
    r = orPattern_0(b, l + 1);
    r = r && consumeToken(b, OR);
    r = r && orPattern_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // varPattern|andPattern
  private static boolean orPattern_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "orPattern_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = varPattern(b, l + 1);
    if (!r) r = andPattern(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // varPattern|andPattern
  private static boolean orPattern_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "orPattern_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = varPattern(b, l + 1);
    if (!r) r = andPattern(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // varPattern  // varPatternCase
  //     | orPattern         // orPattern
  //     | andPattern
  public static boolean pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "pattern")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, PATTERN, "<pattern>");
    r = varPattern(b, l + 1);
    if (!r) r = orPattern(b, l + 1);
    if (!r) r = andPattern(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (pattern ';')+
  public static boolean patterns(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "patterns")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, PATTERNS, "<patterns>");
    r = patterns_0(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!patterns_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "patterns", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // pattern ';'
  private static boolean patterns_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "patterns_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pattern(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '='? value                // predicateEq
  //     | '='? VARIABLE                      // predicateVariable
  //     | '!=' valueOrVar                   // predicateNeq
  //     | '>' valueOrVar                    // predicateGt
  //     | '>=' valueOrVar                   // predicateGte
  //     | '<' valueOrVar                    // predicateLt
  //     | '<=' valueOrVar                   // predicateLte
  //     | 'contains' (STRING | VARIABLE)    // predicateContains
  //     | REGEX
  public static boolean predicate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "predicate")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, PREDICATE, "<predicate>");
    r = predicate_0(b, l + 1);
    if (!r) r = predicate_1(b, l + 1);
    if (!r) r = predicate_2(b, l + 1);
    if (!r) r = predicate_3(b, l + 1);
    if (!r) r = predicate_4(b, l + 1);
    if (!r) r = predicate_5(b, l + 1);
    if (!r) r = predicate_6(b, l + 1);
    if (!r) r = predicate_7(b, l + 1);
    if (!r) r = consumeToken(b, REGEX);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '='? value
  private static boolean predicate_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "predicate_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = predicate_0_0(b, l + 1);
    r = r && value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
